--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@ I realized that I liked high school movies which showcased hedonism and depravit
 I systematically watched them all and took extensive notes. 
 I especially liked the <a href="https://engagedscholarship.csuohio.edu/tdr/vol8/iss1/1/" target="_blank">sex comedies of the 1980s</a>
 . My school was not like a raunchy teen movie, as far as I could tell.
-At the time, I worried that this was because of political correctness. 
+At the time, I worried that this was because of political correctness.
+  
+<p>
+There was a notorious club at my school which I discovered when I followed the breadcrumbs searching for teenage hedonism<a href="https://www.youtube.com/watch?v=GJoH-hlNXtE&t=33s&ab_channel=HunterMaverickIrvin" target="_blank">teenage hedonism</a>. 
+  To me, the barbecue club represented the kind of pure, un-wholesome fun I could only seem to find in 80s movies. 
+  I later found that this was something akin to ‘fraternity culture,’ and that it was deeply toxic<a href="https://berkeleyhighjacket.com/2022/sports/power-prestige-privilege-pillars-of-bbq-club-at-bhs/" target="_blank">deeply toxic</a>. 
+
+<p>
+ I wrote “Toga Day and Other Traditions” as an English class oral presentation about my frustration that A) ‘boys clubs’ weren’t even allowed to exist on our campus, and B) I never even got the change to appropriate toxic male culture, since it was “canceled” by the time I came of age. 
+  As a rebellious teenager, I wanted to be able to fit in spaces where I wasn’t invited. 
+
+ <p>
+  The movie I wrote was based on my experience of joining the barbecue club, except in the movie it was called the Latin club, and centered around the idea of studying the classics. 
+   [I am glad that I got my head on straight before going too far into <i>Return to Western Classical Tradition</i> territory] 
+
+<p>
+ I finished the screenplay for my high school movie and submitted it to the Austin Film Festival script contest when I was in undergrad. 
+  I didn’t win anything, but I got feedback from a reviewer saying that my story was very detailed and that I should “consider writing a book.”
+
+<p>
+ Joining the barbecue club backfired, and I later realized that the movie I wrote was about being trans. 
 
 </p>
