--- a/index.html
+++ b/index.html
@@ -35,3 +35,6 @@ There was a notorious club at my school which I discovered when I followed the b
  Joining the barbecue club backfired, and I later realized that the movie I wrote was about being trans. 
 
 </p>
+
+    </body>
+</html>
