--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ There was a notorious club at my school which I discovered when I followed the b
  Joining the barbecue club backfired, and I later realized that the movie I wrote was about being trans. 
 
 </p>
+  
+<a href="https://imgbox.com/gMVlIr83" target="_blank"><img src="https://thumbs2.imgbox.com/49/d6/gMVlIr83_t.png" alt="image host"/></a>
 
     </body>
 </html>
