--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 I felt very alienated in high school so I wrote a movie loosely based on my high school experience. 
 I realized that I liked high school movies which showcased hedonism and depravity. 
 I systematically watched them all and took extensive notes. 
-I especially liked the <a href="https://engagedscholarship.csuohio.edu/tdr/vol8/iss1/1/" target="_blank">sex comedies of the 1980s</a>
-. My school was not like a raunchy teen movie, as far as I could tell.
+I especially liked the <a href="https://engagedscholarship.csuohio.edu/tdr/vol8/iss1/1/" target="_blank">sex comedies of the 1980s.</a> My school was not like a raunchy teen movie, as far as I could tell.
 At the time, I worried that this was because of political correctness.
   
 <p>
@@ -20,7 +19,7 @@ There was a notorious club at my school which I discovered when I followed the b
   I later found that this was something akin to ‘fraternity culture,’ and that it was <a href="https://berkeleyhighjacket.com/2022/sports/power-prestige-privilege-pillars-of-bbq-club-at-bhs/" target="_blank">deeply toxic</a>. 
 
 <p>
- I wrote “Toga Day and Other Traditions” as an English class oral presentation about my frustration that A) ‘boys clubs’ weren’t even allowed to exist on our campus, and B) I never even got the change to appropriate toxic male culture, since it was “canceled” by the time I came of age. 
+ I wrote <a href="https://docs.google.com/document/d/1NDhCCFES10F7skO0s2Cq8Zaj0sBtZtI0Auvryd04jbM/edit?usp=sharing" target="_blank">"Toga Day and Other Traditions"</a> as an English class oral presentation about my frustration that A) ‘boys clubs’ weren’t even allowed to exist on our campus, and B) I never got the chance to appropriate toxic male culture, since it was “canceled” by the time I came of age. 
   As a rebellious teenager, I wanted to be able to fit in spaces where I wasn’t invited. 
 
  <p>
